vc2-salesforce-version/force-app/main/default/objects/Economy_Analysis__c/Economy_Analysis__c.object-meta.xml
<CustomObject>
    <label>Economy Analysis</label>
    <pluralLabel>Economy Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Analysis Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>