vc2-salesforce-version/force-app/main/default/objects/Economy_Analysis__c/fields/Analysis_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Timestamp__c</fullName>
    <label>Analysis Timestamp</label>
    <type>DateTime</type>
</CustomField>