vc2-salesforce-version/force-app/main/default/objects/Economy_Analysis__c/fields/Ingame_Date__c.field-meta.xml
<CustomField>
    <fullName>Ingame_Date__c</fullName>
    <label>Ingame Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>