vc2-salesforce-version/force-app/main/default/objects/Economy_Analysis__c/fields/Save_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Save_File_Name__c</fullName>
    <label>Save File Name</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
</CustomField>