vc2-salesforce-version/force-app/main/default/objects/Economy_Analysis__c/fields/Source_Save_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Save_File_Name__c</fullName>
    <label>Source Save File Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>