vc2-salesforce-version/force-app/main/default/objects/Economy_Analysis__c/fields/Total_World_Imports__c.field-meta.xml
<CustomField>
    <fullName>Total_World_Imports__c</fullName>
    <label>Total World Imports (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>