vc2-salesforce-version/force-app/main/default/objects/Economy_Analysis__c/fields/Total_World_Population__c.field-meta.xml
<CustomField>
    <fullName>Total_World_Population__c</fullName>
    <label>Total World Population</label>
    <type>Summary</type>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Country_Economy__c.Population__c</summarizedField>
    <summaryForeignKey>Country_Economy__c.Economy_Analysis__c</summaryForeignKey>
</CustomField>